--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,9 @@
     <string name="menu_gallery">Favourites</string>
     <string name="menu_slideshow">News</string>
     <string name="menu_settings">Settings</string>
+    <string name="action_logout">Log Out</string>
+    <string name="auth">Authentication</string>
+    <string name="auth_password">Password</string>
+    <string name="auth_email">Email</string>
+    <string name="auth_register">Register</string>
 </resources>
