--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
     <string name="auth_password">Password</string>
     <string name="auth_email">Email</string>
     <string name="auth_register">Register</string>
+
+    <string name="add_game_to_favourites">"Game Added To Favourites"</string>
+    <string name="game_exists">"Game already is in your favourites list"</string>
 </resources>
