--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,7 @@
     <string name="remove_game_from_favourites">"Game has been removed"</string>
     <string name="game_exists">"Game already is in your favourites list"</string>
     <string name="empty_games">You have not favourite games</string>
+    <string name="game_name">Name</string>
+    <string name="release_date">Release Date</string>
+    <string name="rating">Rating</string>
 </resources>
