--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
 
     <string name="tab_register">Register</string>
     <string name="tab_login">Login</string>
+    <string name="deactivate_acc">Deactivate</string>
 </resources>
